syntax = "proto3";

package pb;

option go_package = "github.com/ebukacodes21/soleluxury-server/pb";

import "store.proto";

message GetStoreRequest {
    int64 id = 1;
}

message GetStoreResponse {
    Store store = 1;
}